Keep hostile composition allocation deterministic